tests/ui/async-await/dont-suggest-missing-await.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-missing-await.rs:14:18
   |
LL |         take_u32(x)
   |         -------- ^ expected `u32`, found future
   |         |
   |         arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/dont-suggest-missing-await.rs:5:4
   |
LL | fn take_u32(x: u32) {}
   |    ^^^^^^^^ ------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
